Fix the table's caption display
For long titles it didn't look so nice

--- a/app/less/diagram.less
+++ b/app/less/diagram.less
@@ -16,9 +16,10 @@ table.object-model {
 		
 		border: @border_setting;
 		background-color: rgba(0, 0, 0, 0.2);
-		width: 8em;
+		width: fit-content;
+		min-width: 8em;
 		border-bottom: none;
-		padding: 4px 10px 4px 1.3em;
+		padding: 4px 10px;
 		text-align: left;
 	}
 	
@@ -29,7 +30,7 @@ table.object-model {
 	th {
 		.font-size(0);
 		
-		border-top: @border_setting;		
+		border-top: @border_setting;
 		overflow: hidden;
 		padding: 2px 0;
 	}
