--- a/public/css/app.css
+++ b/public/css/app.css
@@ -224,9 +224,12 @@ table.object-model caption {
   border-bottom-left-radius: 0;
   border: 2px solid #929292;
   background-color: rgba(0, 0, 0, 0.2);
-  width: 8em;
+  width: -webkit-fit-content;
+  width: -moz-fit-content;
+  width: fit-content;
+  min-width: 8em;
   border-bottom: none;
-  padding: 4px 10px 4px 1.3em;
+  padding: 4px 10px;
   text-align: left;
 }
 table.object-model td {
